# Heap

./: CMakeLists.txt  Malloc_cpp.class.violet.html  README.md  main.cpp
include/: CLAllocatedChunks.h  CLAllocatedList.h  CLChunk.h  CLDoubleLinkListChunk.h  CLDoubleLinkListNode.h  CLFreeChunksManager.h  CLFreeLists.h  CLInitAllocatedMomory.h  CLLargeList.h  CLMainHeapControler.h  CLMemoryAllocator.h  CLPerTheadHeapControler.h  CLPerThreadControlUnit.h  CLSingleLinkListChunk.h  CLSingleLinkListNode.h  ILMemoryFlusher.h  SLHeadOrFoot.h  ToolFunctions.h  define.h
source/: CLAllocatedChunks.cpp  CLAllocatedList.cpp  CLChunk.cpp  CLDoubleLinkListChunk.cpp  CLDoubleLinkListNode.cpp  CLFreeChunksManager.cpp  CLFreeLists.cpp  CLInitAllocatedMomory.cpp  CLLargeList.cpp  CLMainHeapControler.cpp  CLMemoryAllocator.cpp  CLPerTheadHeapControler.cpp  CLPerThreadControlUnit.cpp  CLSingleLinkListChunk.cpp  CLSingleLinkListNode.cpp  ILMemoryFlusher.cpp  SLHeadOrFoot.cpp
